--- a/src/leo.html
+++ b/src/leo.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+    插件demo
+    <script src="lib/jquery/jquery-2.0.3.min.js"></script>
+    <script src="js/easyAccordion.js"></script>
 </body>
 
 </html>
